syntax = "proto3";

package ai.stigmer.commons.apiresource;

import "ai/stigmer/commons/apiresource/apiresourcekind/api_resource_kind.proto";
import "google/protobuf/descriptor.proto";

extend google.protobuf.ServiceOptions {
  ai.stigmer.commons.apiresource.apiresourcekind.ApiResourceKind api_resource_kind = 90100;
}
